--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         <div style="width:57%; text-align: right;"">
                         <h1>A/C</h1>
                     </div>
-                    <div style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;" onclick=" openAir()">
+                    <div style=" width: 50px; height: 50px; display: flex; align-items: center; justify-content:
+                            center;" onclick=" openAir()">
                             <img src=" ./img/down-info/air/close.svg" width="40px" alt="Wrench">
                         </div>
                     </div>
@@ -52,9 +53,12 @@
                 </div>
                 <div style="width: 100%;height: 10%;display: flex; justify-content: space-around; align-items: center;">
                     <div class="air-button">OFF</div>
-                    <div style="display: flex; flex-direction: column;width: 25%;height: 160%; align-items: center; justify-content: center;">
-                        <div class="air-button" style="width: 100%;height: 50%; display: flex; justify-content: space-evenly; align-items: center;">
-                            <img src=" ./img/down-info/air/fan.svg" width="25px" style="filter: brightness(0)" alt="Fan">
+                    <div
+                        style="display: flex; flex-direction: column;width: 25%;height: 160%; align-items: center; justify-content: center;">
+                        <div class="air-button"
+                            style="width: 100%;height: 50%; display: flex; justify-content: space-evenly; align-items: center;">
+                            <img src=" ./img/down-info/air/fan.svg" width="25px" style="filter: brightness(0)"
+                                alt="Fan">
                         </div>
                     </div>
                     <div class="air-button">AUTO</div>
@@ -71,7 +75,7 @@
         </div>
 
         <div class="settings-modal">
-            
+
         </div>
 
         <div id="swup" class="content transition-fade">
@@ -83,9 +87,19 @@
                     <div class="music" style="display: flex;">
                         <div class="music-controls" id="m-controls">
                             <div
-                                style="display: flex; flex-direction: column;align-items: center; justify-content: center;width: 50%; height: 100%;">
-                                <p id="artist">RFM</p>
-                                <p id="music">Popcorn Time</p>
+                                style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 50%; height: 90%;">
+                                <div style="text-align: center;">
+                                    <p id="artist">RFM</p>
+                                    <p id="music">Popcorn Time</p>
+                                </div>
+                                <div style="width: 80%; display: flex; flex-direction: column; align-items: center;">
+                                    <div id="mslider" style="margin-bottom: 20px;"></div>
+                                    <div style="display: flex; justify-content: space-around; width: 100%;">
+                                        <img  src="./img/music/controls/left.svg" width="55px" alt="Previous">
+                                        <img  src="./img/music/controls/pause.svg"  width="55px" alt="Pause" onclick="triggerMusic()">
+                                        <img  src="./img/music/controls/right.svg" width="55px" alt="Next">
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
@@ -196,8 +210,7 @@
 
                     </div>
                     <div style="display: flex; flex-direction: column;align-items: center;">
-                        <img src="./img/down-info/heated-seats/seat-right.png" width="40px"
-                            alt="Passenger Seat">
+                        <img src="./img/down-info/heated-seats/seat-right.png" width="40px" alt="Passenger Seat">
                     </div>
                 </div>
                 <p class="app-name" style="margin-top:3.5%">Heated Seats</p>
