--- a/car.html
+++ b/car.html
@@ -69,40 +69,67 @@
                 </div>
             </div>
 
-            <div id="swup" class="content transition-fade"
-                style="flex-direction: column; justify-content: space-evenly; align-items: center;">
-                <div style="height: 50%; display: flex; justify-content: center; align-items: flex-end;">
-                    <div style="width: 65%;" class="car">
-                        <img src=" ./img/car/tesla-side.png" width="100%" alt="Car">
-                        <!-- <img src=" ./img/car/tesla-wheel.png" width="100px" class="wheel" style="position: absolute; top: 332px;right: 706.5px;" alt="Wheel">
-                        <img src=" ./img/car/tesla-wheel.png" width="100px" class="wheel" style="position: absolute; top: 332px;right: 1133px;" alt="Wheel">
-                        -->
+            <div id="swup" class="content transition-fade">
+                <div class="tire" style="width: 100%; height: 100%; display: none; flex-direction: column;">
+                    <div style="height:15%; width:100%; display: flex; justify-content: center;">
+                        <div class="button-pressure" style="height: 77%; width: 5.5%; display: flex; justify-content: center; align-items: center;">
+                            <img onclick="tirePressure()" src="./img/car/back.svg" width="65%" style="padding-right: 7.5%;" alt="Back">
+                        </div>
+                    </div>
+                    <div style="height: 85%;display: flex; justify-content: center;">
+                        <img class="fadeinbottom" src=" ./img/tesla-up.png" width="20%" alt="Car">
                     </div>
                 </div>
-
-                <div id="car" style="display: flex; justify-content: space-evenly; width: 100%; height: 50%;">
-                    <div id="circle1" class="circle"
-                        style="background-image: url('./img/car/oil.svg'); background-position: center; background-size: 55%; background-repeat: no-repeat;height: 80%;">
-                    </div>
-                    <div
-                        style="width: 40%; height: 100%; display: flex; flex-direction: column-reverse; align-items: center; justify-content: space-between;">
-                        <div style="display: flex;">
-                            <p id="temperature" style="font-weight: bold;">78.000</p>
-                            <p style="margin-left: 2px; display: flex; align-items: center;" class=" opacity-letters">km
-                            </p>
+                <div class="info-car"
+                    style="width: 100%; height: 100%; display: flex;flex-direction: column; justify-content: space-evenly; align-items: center;">
+                    <div style="height: 50%; display: flex; justify-content: center; align-items: flex-end;">
+                        <div style="width: 65%;" class="car">
+                            <img src=" ./img/car/tesla-side.png" width="100%" alt="Car">
+                            <!-- <img src=" ./img/car/tesla-wheel.png" width="100px" class="wheel" style="position: absolute; top: 332px;right: 706.5px;" alt="Wheel">
+                        <img src=" ./img/car/tesla-wheel.png" width="100px" class="wheel" style="position: absolute; top: 332px;right: 1133px;" alt="Wheel">
+                        -->
                         </div>
-                        <div style="width: 100%; height: 50%;">
-                            <div style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
-                                onclick="tirePressure()">
-                                <div class="button-pressure">
-                                    <img src="./img/car/pressure.svg" width="50%" alt="Pressure">
+                    </div>
+
+                    <div id="car" style="display: flex; justify-content: space-evenly; width: 100%; height: 50%;">
+                        <div id="circle1" class="circle"
+                            style="background-image: url('./img/car/oil.svg'); background-position: center; background-size: 55%; background-repeat: no-repeat;height: 80%;">
+                        </div>
+                        <div
+                            style="width: 40%; height: 100%; display: flex; flex-direction: column-reverse; align-items: center; justify-content: space-between;">
+                            <div style="display: flex;">
+                                <p id="temperature" style="font-weight: bold; height: 20%;">78.000</p>
+                                <p style="margin-left: 2px; display: flex; align-items: center;"
+                                    class="opacity-letters">km
+                                </p>
+                            </div>
+                            <div class="consumos"
+                                style="display: flex; justify-content: space-between; height: 30%; width: 100%;">
+                                <div style="display: flex; flex-direction: column;">
+                                    <p class="little-car">Instant Consumption</p>
+                                    <p style="font-weight: bold;">0.0 <span class="opacity-letters">l/100km</span>
+                                    </p>
                                 </div>
-                                <p class="little-weather" style="margin-top: 0.4rem;">Tire Pressure</p>
+
+                                <div style="display: flex; flex-direction: column;">
+                                    <p class="little-car">Average Consumption</p>
+                                    <p style="font-weight: bold;">9.1 <span class="opacity-letters">l/100km</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div style="width: 100%; height: 50%;">
+                                <div style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
+                                    onclick="tirePressure()">
+                                    <div class="button-pressure">
+                                        <img src="./img/car/pressure.svg" width="50%" alt="Pressure">
+                                    </div>
+                                    <p class="little-car" style="margin-top: 0.4rem;">Tire Pressure</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div id="circle2" class="circle"
-                        style="background-image: url('./img/car/fuel.svg'); background-position: center; background-size: 40%; background-repeat: no-repeat;height: 80%;">
+                        <div id="circle2" class="circle"
+                            style="background-image: url('./img/car/fuel.svg'); background-position: center; background-size: 40%; background-repeat: no-repeat;height: 80%;">
+                        </div>
                     </div>
                 </div>
             </div>
