--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
                 async defer></script>
             <script type="text/javascript" src="./js/maps.js"></script>
+            <script type="text/javascript" src="./js/phone.js"></script>
             <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
