--- a/phone.html
+++ b/phone.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="iconbar">
                     <div style="border-radius: 5%; height: 100%;" class="button">
-                        <img src="./img/wall-clock.png" width="80%">
+                        <img id="phone" src="./img/wall-clock.png" width="80%">
                     </div>
                     <div style="border-radius: 5%; height: 100%;" class="button">
                         <img src="./img/buttons.png" width="80%">
