--- a/music.html
+++ b/music.html
@@ -103,7 +103,18 @@
 
                     <div id="swup" class="content transition-fade"
                         style="flex-direction: column ; align-items: center;">
-                        <div style="height: 50%; width: 100%;"></div>
+                        <div style="height: 50%; width: 90%; display: flex; justify-content: space-between;">
+                            <div class="box" style="height: 95%; width: 45%; "></div>
+                            <div class="box" style="height: 95%; width: 45%;">
+                                <div
+                                    style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
+                                    <img src="./img/music/radio.svg" width=45%" alt="Radio">
+                                    <p class="little-car">RADIO</p>
+                                </div>
+                            </div>
+
+                        </div>
+
                         <div
                             style="display: flex; flex-direction: column; justify-content: flex-end; height: 50%; width: 100%; align-items: center">
                             <div class="box" style="height: 95%; width: 50%; ">
