--- a/music.html
+++ b/music.html
@@ -150,7 +150,7 @@
                                         style="width: 7%; display: flex;  flex-direction: column; justify-content: space-between; align-items: center;">
                                         <img src="./img/music/controls/sound.svg" width="100%" height="20%">
                                         <div style="height: 80%;">
-                                            <input type="range" min="1" max="100" value="50" class="slider"
+                                            <input type="range" min="1" orient="vertical" max="100" value="50" class="slider"
                                                 id="myRange">
                                         </div>
                                     </div>
